<resources>
    <string name="app_name">Politigram</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_sign_up_text">Don\'t have an account? <b>Sign up.</b></string>
    <string name="register_sign_in_text">Already have an account? <b>Sign in.</b></string>
    <string name="cancel_profile_edits_text">Don\'t want to make any changes?\n<b>Return to Politigram.</b></string>
    <string name="register_title">REGISTER</string>

    <string name="set_profile_picture_dialog_title">"Select profile image"</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>

    <string name="edit_text_email_taken">Email is already in use by another profile!</string>
    <string name="edit_text_field_required">This field is required.</string>
    <string name="edit_text_email_invalid">This email address is invalid.</string>
    <string name="edit_text_password_length_invalid">Password must be at least 6 characters.</string>

    <string name="registered_toast">New profile registered!</string>
    <string name="not_registered_toast">No profile registered.</string>
    <string name="profile_saved_toast">Profile saved!</string>
    <string name="profile_not_updated_toast">Profile not updated.</string>
    <string name="settings_activity_label">Settings</string>

    <string name="privacy_setting_key">PrivacySetting</string>
    <string name="privacy_setting_summary">Your info won\'t be shared with Politigram or listed on the leaderboard.</string>
    <string name="privacy_setting_title">Privacy Setting</string>
    <string name="application_settings_preference_category">Application Settings</string>
    <string name="account_settings_preference_category">Account Settings</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_key">SignOut</string>
    <string name="classification_result_activity_title">Classification Result</string>
    <string name="classifier_history_activity_title">Classifier History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_key">EditProfile</string>
</resources>
