<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/application_settings_preference_category" >
        <SwitchPreference
            android:key="@string/privacy_setting_key"
            android:summary="@string/privacy_setting_summary"
            android:title="@string/privacy_setting_title"
            android:defaultValue="false"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_preference_category" >
        <Preference
            android:title="@string/edit_profile_title"
            android:key="@string/edit_profile_key" />
        <Preference
            android:title="@string/sign_out_title"
            android:key="@string/sign_out_key" />
    </PreferenceCategory>

</PreferenceScreen>